--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,7 +14,7 @@
         <h2>Programming is Fun</h2>
         <h3>Learning is a Great Experience</h3>
 
-        <a href="https://www.holbertonschool.com/holberton-logo.png">holberton school</a>
+        <a href="https://www.holbertonschool.com/holberton-logo.png">Holbertonschool Homepage</a>
 
 
 
