--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,7 +15,8 @@
         <h3>Learning is a Great Experience</h3>
 
         <a href="https://www.holbertonschool.com/holberton-logo.png">Holbertonschool Homepage</a>
-        <a href="\Users\Administrator\Documents\ISWE\alx_html_css\html_basic">Tweets Hompage</a>
+        <a href="\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/tweets.html">Tweets Hompage</a>
+      
 
     </Body>
     
