--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,7 +7,7 @@
     <Body>
         <blockquote class="twitter-tweet"><p lang="en" dir="ltr">#@ focus on ALX Intro to SWE</p>&mdash; Alagie H Bah (@alagie_hafiz) <a href="https://twitter.com/alagie_hafiz/status/1676943311657902080?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
        
-        <a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic">Index Homepage</a>
+        <a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/index.html">Index Homepage</a>
         
 
     </Body>
