My task3 project

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -28,7 +28,7 @@
         <header>
             <ul>
               <li><a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/base_index.html">Base_Index Hompage</a></li>
-              <li><a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/index.html">Index Hompage</a></li>
+              <li><a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/Tweets.html">Tweets Hompage</a></li>
             </ul>
         </header>
         <footer>
