My task 4 project

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,6 +24,39 @@
             placeholder to add comment thread later
         </p>
      </aside>
+     <article>
+        <table>
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Age</td>
+                    <td>Country</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>john</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Auatralia</td>
+                </tr> 
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>   
+            </tbody>
+        </table>
+     </article>
     </main>
         <header>
             <ul>
