My css basic project

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html> 
+<!DOCTYPE html> 
 
 <html lang="en">
     <head>
@@ -8,8 +8,8 @@
         <title>My first webpage</title>
     </head>
     <Body>
-    <main>
-     <article>     
+     <main>
+      <article>     
         <p>Programming is cool.</p>
         <p>I love to be a software enginner.</p>
         <p>It is fun to be a programmer.</p>
@@ -20,8 +20,8 @@
         <h3>Learning is a Great Experience</h3>
 
         <a href="https://www.holbertonschool.com/holberton-logo.png">Holbertonschool Homepage</a>
-        <a href="\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/index.html">Tweets Hompage</a>
-     </article> 
+        <a href="tweets.html">Tweets Hompage</a>
+      </article> 
      <aside>
         <p>
             placeholder to add comment thread later
@@ -59,12 +59,12 @@
                 </tr>   
             </tbody>
         </table>
-     </article>
-    </main>
+      </article>
+     </main>
         <header>
             <ul>
-              <li><a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/base_index.html">Base_Index Hompage</a></li>
-              <li><a href="C:\Users\Administrator\Documents\ISWE\alx_html_css\html_basic/Tweets.html">Tweets Hompage</a></li>
+              <li><a href="base_index.html">Base_Index Hompage</a></li>
+              <li><a href="tweets.html">Tweets Hompage</a></li>
             </ul>
         </header>
         <footer>
