My css basics project

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -32,6 +32,7 @@
         <a href="tweets.html">Tweets Hompage</a>
       </article> 
      <article>
+        <h2>The table of learners</h2>
         <table>
             <thead>
                 <tr>
@@ -51,7 +52,7 @@
                     <td>28</td>
                     <td>Canada</td>
                 </tr>
-                
+                <tr>
                     <td>Michael</td>
                     <td>32</td>
                     <td>Auatralia</td>
