--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -8,6 +8,7 @@
         <title>My first webpage</title>
         <link href="base.css" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
+        <script></script>
     </head>
     <Body>
         <header>
@@ -18,7 +19,8 @@
         </header> 
         <main>
             <article>
-             <blockquote class="twitter-tweet"><p lang="en" dir="ltr">#@ focus on ALX Intro to SWE</p>&mdash; Alagie H Bah (@alagie_hafiz) <a href="https://twitter.com/alagie_hafiz/status/1676943311657902080?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+             <h2>My twitter handle</h2>   
+             <blockquote class="twitter-tweet"><p lang="en" dir="ltr">#@ focus on ALX Intro to SWE</p>&mdash; Alagie H Bah (@alagie_hafiz) <a href="https://twitter.com/alagie_hafiz/status/1676943311657902080?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> 
              <a href="index.html">Index Homepage</a>
             </article>
             <aside>
