--- a/flexbox/0-index.html
+++ b/flexbox/0-index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='0-styles.css'>
   </head>
   <body>
-    <!--Header section-->
+    <!--Header--> 
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-logo">
@@ -45,7 +45,7 @@
         </nav>
       </div>
     </header>
-    <!--Main-->
+    <!--Main--> 
     <main>
       <!--Hero section-->
       <section class="section-hero" data-section-theme="dark">
@@ -58,7 +58,7 @@
           </div>
         </div>
       </section>
-      <!--Services section-->
+      <!--Services section -->
       <section id="services" class="section">
         <div class="container">
           <header class="section-header">
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <!--Works section-->
+      <!--Works section--> 
       <section id="works" class="section" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -267,7 +267,7 @@
           </div>
         </div>
       </section>
-      <!--Contact section-->
+      <!-- Contact section -->
       <section id="contact" class="section">
         <div class="container">
           <header class="section-header">
@@ -283,7 +283,7 @@
         </div>
       </section>
     </main>
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
         <div class="row">
