--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -28,6 +28,7 @@
         </p>
      </aside>
      <article>
+        <h3>Container for table of learners</h3>
         <table>
             <thead>
                 <tr>
@@ -47,6 +48,7 @@
                     <td>28</td>
                     <td>Canada</td>
                 </tr>
+                <tr>
                 
                     <td>Michael</td>
                     <td>32</td>
