--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,23 +8,23 @@
         <title>My first webpage</title>
     </head>
     <Body>
+     <header>
+            <ul>
+              <li><a href="base_index.html">Base_Index Hompage</a></li>
+              <li><a href="index.html">Index Hompage</a></li>
+            </ul>
+        </header>
         <main>
             <article>
-             <blockquote class="twitter-tweet"><p lang="en" dir="ltr">#@ focus on ALX Intro to SWE</p>&mdash; Alagie H Bah (@alagie_hafiz) <a href="https://twitter.com/alagie_hafiz/status/1676943311657902080?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <h2>My twitter handle</h2>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">#@ focus on ALX Intro to SWE</p>&mdash; Alagie H Bah (@alagie_hafiz) <a href="https://twitter.com/alagie_hafiz/status/1676943311657902080?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> 
+             
              <a href="index.html">Index Homepage</a>
             </article>
             <aside>
              <p>placeholder to add comment thread later</p>
             </aside>
         </main>
-
-   
-        <header>
-            <ul>
-              <li><a href="base_index.html">Base_Index Hompage</a></li>
-              <li><a href="index.html">Index Hompage</a></li>
-            </ul>
-        </header>
         <footer>
             <p>The website was made by Alagie Hafigue - <a href="https://intranet.alxswe.com" target="blank">Alx intranet</a> </p>
         </footer>
