html advanced project

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -50,6 +50,7 @@
             </div>
         </section>
         <section>
+            <h3>A quote block section</h3>
             <div>
               <img src="images/tree.jpg" alt="tree">
               <div>
